commit by suraj : some changes in the UI

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img" />
     <h1>I'm Akhil</h1>
     <h2>
-      a <span class="pro">pro</span><span>grammer</span>
+      A <span class="pro">Pro</span><span>grammer</span>
     </h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img" />
     <img src="images/mountain.png" alt="mountain-img" />
@@ -21,7 +21,7 @@
   <div class="profile">
     <img src="images/me.png" alt="my pic">
     <h2>Hello.</h2>
-    <p class="intro">I am a B.tech Computerscience graduate.I a web devloper.I ❤️ coffee</p>
+    <p class="intro">I am a B.tech Computer Science graduate and a Web Devloper. Fun fact : I ❤️ coffee</p>
   </div>
   <hr>
   <div class="skills">
