--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
   </head>
   <body>
   <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud-img" />
+    <marquee direction ="right"><img  src="images/cloud.png" alt="cloud-img" /> </marquee>
+    <!-- <img class="top-cloud" src="images/cloud.png" alt="cloud-img" /> -->
     <h1>I'm Akhil</h1>
     <h2>
       A <span class="pro">Pro</span><span>grammer</span>
     </h2>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img" />
+    <marquee direction ="left"><img  src="images/cloud.png" alt="cloud-img" /> </marquee>
     <img src="images/mountain.png" alt="mountain-img" />
   </div>
   <div class="middle-container">
