few more changes

--- a/index.html
+++ b/index.html
@@ -30,24 +30,24 @@
     <div class="skill-row">
       <img class="design-img " src="images/web.png" alt="">
       <h3>Web designing</h3>
-      <p>I started learning to code when i was in my 1st year of college.over time,I have gained some exprience in designing webpages. </p>
+      <p>I started to code when I was in my 1st year of college, over time I have gained some exprience in designing webpages. </p>
     </div>
     <div class="skill-row">
       <img class="code-img" src="images/coding.png" alt="">
       <h3>Programming languages</h3>
-      <p>I know basics of c, java, python.</p>
+      <p>I like to code c, java, python.</p>
     </div>
     <div class="skill-row">
       <img class="camera-img" src="images/camerap.png" alt="camera">
       <h3>Photography</h3>
-      <p>I am not a proffesional photogrpher but some times i like to take photos of birds</p>
+      <p>I am not a profesional photographer but sometimes i do take photos of birds</p>
     </div>
   </div>
   <hr>
   <div class="contact-me">
     <h2>Get In Touch</h2>
-    <h3>If you want any website</h3>
-    <p class="contact-message">feel free to contact me.</p>
+    <h3>If you want me  to build any website for you</h3>
+    <p class="contact-message">Feel free to contact me.</p>
     <a class="btn" href="mailto:akhil19964@live.com">CONTACT ME</a>
   </div>
 </div>
@@ -57,7 +57,7 @@
   <a class="footer-link" href="https://www.linkedin.com/in/akhil-a-992644131/">LinkedIn</a>
   <a class="footer-link" href="https://twitter.com/A4AKHIL007">Twitter</a>
   <a class="footer-link" href="">Website</a>
-  <p class="copyright">© 2018 Akhil.</p>
+  <p class="copyright">© 2020 Akhil.</p>
 </div>
 
   </body>
